# solana-zk-nft

./: .gitignore  README.md
token/: Cargo.toml  README.md  run.sh
token/src/: lib.rs
token/src/zk/: circuit.rs  mod.rs
token/tests/: integration_test.rs
