[package]
name = "solana-zk-nft"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[[bin]]
name = "mint-nft"
path = "src/bin/mint_nft.rs"

[[bin]]
name = "transfer-nft"
path = "src/bin/transfer_nft.rs"

[dependencies]
# Solana & SPL - use 1.18 to match mpl-token-metadata
solana-client = "1.18"
solana-sdk = "1.18"
mpl-token-metadata = "4.1"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# ZK proof libraries
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-snark = "0.4"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.0"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
